--- a/render.yaml
+++ b/render.yaml
@@ -2,11 +2,11 @@ services:
   # Backend Service
   - type: web
     name: collabspace-backend
-    runtime: node
+    env: node
     region: oregon
     plan: free
     rootDir: backend
-    buildCommand: npm install
+    buildCommand: npm ci
     startCommand: npm start
     envVars:
       - key: NODE_ENV
@@ -30,11 +30,11 @@ services:
   # Frontend Service
   - type: web
     name: collabspace-frontend
-    runtime: node
+    env: static
     region: oregon
     plan: free
     rootDir: frontend
-    buildCommand: npm install && npm run build
+    buildCommand: npm ci && npm run build
     staticPublishPath: dist
     envVars:
       - key: VITE_API_URL
